--- a/src/style/main.css
+++ b/src/style/main.css
@@ -99,14 +99,9 @@ header .header-holder .header-user-block img {
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  background-size: cover;
   padding: 0 100px;
 }
-
-.home-hero {
-  background-image: url("../images/hero-background.png");
-}
-.home-hero .home-hero-block {
+.home-section .home-block {
   width: 60%;
   display: flex;
   align-items: center;
@@ -115,24 +110,57 @@ header .header-holder .header-user-block img {
   align-items: flex-start;
   gap: 25px;
 }
-.home-hero .home-hero-block h1 {
+.home-section .home-block h2 {
   color: white;
   font-family: learn-serbian-medium;
   font-size: 40px;
   margin: 0;
 }
-.home-hero .home-hero-block p {
+.home-section .home-block p {
   color: white;
   font-family: learn-serbian-light;
   font-size: 20px;
   margin: 0;
 }
-.home-hero .home-hero-block button {
+.home-section .home-block button {
   color: white;
   font-family: learn-serbian-medium;
   font-size: 25px;
   background-color: #1466c7;
   border: none;
   border-radius: 15px;
+  cursor: pointer;
   padding: 15px;
+}
+.home-section .home-inner-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.home-section .home-inner-section img {
+  height: 400px;
+  width: 400px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.home-section .home-inner-section .home-block {
+  width: 50%;
+}
+.home-section .home-lessons .home-block {
+  align-items: flex-end;
+}
+.home-section .home-lessons .home-block h2, .home-section .home-lessons .home-block p {
+  text-align: right;
+}
+
+.home-hero {
+  background-image: url("../images/hero-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.home-info {
+  gap: 100px;
 }/*# sourceMappingURL=main.css.map */
