Homepage & basic structures

--- a/src/style/additional/_fonts.scss
+++ b/src/style/additional/_fonts.scss
@@ -29,6 +29,11 @@
 }
 
 @font-face {
+    font-family: learn-serbian-light-italic;
+    src: url("../fonts/MontserratAlternates-LightItalic.ttf");
+}
+
+@font-face {
     font-family: learn-serbian-thin;
     src: url("../fonts/MontserratAlternates-Thin.ttf");
 }
