--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -11,11 +11,7 @@ header {
         padding: 5px 50px;
 
         .header-title-block #header-title {
-            color: white;
-            font-family: learn-serbian-bold-italic;
-            font-size: set-size(xl);
-            text-transform: capitalize;
-            margin: 0;
+            @include learn-serbian-title;
         }
 
         nav ul {
