--- a/src/style/main.css
+++ b/src/style/main.css
@@ -56,6 +56,7 @@ header .header-holder {
   background-color: rgba(45, 42, 56, 0.7);
   box-shadow: 0px 1px 5px 0px rgba(255, 255, 255, 0.4);
   padding: 5px 50px;
+  position: relative;
 }
 header .header-holder .header-title-block #header-title {
   color: white;
@@ -93,6 +94,46 @@ header .header-holder .header-user-block img {
   -o-object-fit: contain;
      object-fit: contain;
   border-radius: 50%;
+}
+
+.header-bottom {
+  height: 60px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background-color: rgba(45, 42, 56, 0.7);
+  box-shadow: 0px -1px 5px 0px rgba(255, 255, 255, 0.4);
+  position: fixed;
+  top: calc(100% - 60px);
+}
+.header-bottom .header-bottom-link-holder {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 30px;
+}
+.header-bottom .header-bottom-link-holder .header-bottom-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.header-bottom .header-bottom-link-holder .header-bottom-link img {
+  height: 30px;
+  width: 30px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.header-bottom .header-bottom-link-holder .header-bottom-link p {
+  color: #ccc;
+  font-family: learn-serbian-light;
+  font-size: 15px;
+  margin: 0;
 }
 
 footer {
