Completed header responsive design, responsive reorganization

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -65,6 +65,7 @@ header {
 
         .header-bottom-link {
             @include center(column);
+            cursor: pointer;
 
             img {
                 height: 30px;
