--- a/src/style/main.css
+++ b/src/style/main.css
@@ -122,6 +122,7 @@ header .header-holder .header-user-block img {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  cursor: pointer;
 }
 .header-bottom .header-bottom-link-holder .header-bottom-link img {
   height: 30px;
@@ -293,6 +294,38 @@ footer .footer-copyright span {
   padding: 50px 100px;
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  header .header-holder {
+    padding: 5px 30px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  header .header-holder {
+    padding: 5px 15px;
+  }
+  header .header-holder .header-title-block #header-title {
+    font-size: 25px;
+  }
+  header .header-holder .header-user-block img {
+    height: 45px;
+    width: 45px;
+  }
+}
+@media screen and (max-width: 319px) {
+  header .header-holder {
+    padding: 5px 15px;
+  }
+  header .header-holder .header-title-block #header-title {
+    font-size: 20px;
+  }
+  header .header-holder .header-user-block img {
+    height: 40px;
+    width: 40px;
+  }
+  .header-bottom {
+    flex-wrap: wrap;
+  }
+}
 @media screen and (min-width: 1201px) and (max-width: 1699px) {
   .home-hero {
     background-size: contain;
@@ -300,15 +333,15 @@ footer .footer-copyright span {
   }
 }
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
-  .home-block h2 {
-    font-size: 35px !important;
+  .home-section .home-block h2 {
+    font-size: 35px;
   }
-  .home-block p {
-    font-size: 16px !important;
+  .home-section .home-block p {
+    font-size: 16px;
   }
-  .home-inner-section img {
-    height: 300px !important;
-    width: 300px !important;
+  .home-section .home-section .home-inner-section img {
+    height: 300px;
+    width: 300px;
   }
   .home-hero {
     background-size: contain;
@@ -316,22 +349,22 @@ footer .footer-copyright span {
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  .home-block h2 {
-    font-size: 35px !important;
+  .home-section .home-block h2 {
+    font-size: 35px;
   }
-  .home-block p {
-    font-size: 16px !important;
+  .home-section .home-block p {
+    font-size: 16px;
   }
-  .home-inner-section img {
-    height: 300px !important;
-    width: 300px !important;
+  .home-section .home-inner-section img {
+    height: 300px;
+    width: 300px;
   }
   .home-hero {
     background-size: contain;
     background-position-y: 50%;
   }
   .home-info {
-    padding: 50px 75px !important;
+    padding: 50px 75px;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
