--- a/src/style/main.css
+++ b/src/style/main.css
@@ -326,6 +326,68 @@ footer .footer-copyright span {
     flex-wrap: wrap;
   }
 }
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  footer {
+    padding: 30px 150px;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  footer {
+    padding: 30px 50px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  footer {
+    padding: 30px;
+  }
+  footer .footer-block-holder {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  footer .footer-image-holder {
+    width: 100%;
+    justify-content: space-between;
+  }
+  footer .footer-image-holder img {
+    height: 60px;
+    width: 60px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  footer {
+    padding: 30px;
+  }
+  footer .footer-block-holder {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  footer .footer-image-holder {
+    width: 100%;
+    justify-content: space-between;
+  }
+  footer .footer-image-holder img {
+    height: 50px;
+    width: 50px;
+  }
+}
+@media screen and (max-width: 319px) {
+  footer {
+    padding: 30px;
+  }
+  footer .footer-block-holder {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  footer .footer-image-holder {
+    width: 100%;
+    justify-content: space-between;
+    gap: 5px;
+  }
+  footer .footer-image-holder img {
+    height: 25px;
+    width: 25px;
+  }
+}
 @media screen and (min-width: 1201px) and (max-width: 1699px) {
   .home-hero {
     background-size: contain;
