--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -10,8 +10,25 @@ header {
         padding: 5px 50px;
         position: relative;
 
-        .header-title-block #header-title {
-            @include learn-serbian-title;
+        .header-title-block {    
+            #header-title {
+                @include learn-serbian-title;
+            }
+
+            #header-search {
+                width: 150%;
+                color: white;
+                font-family: learn-serbian-light-italic;
+                font-size: set-size(md);
+                background-color: $gradient-first;
+                border: none;
+                border-radius: 10px;
+                padding: 10px;
+
+                &::placeholder {
+                    color: white;
+                }
+            }
         }
 
         nav ul {
@@ -33,8 +50,9 @@ header {
             }
 
             .nav-li-active a {
-                color: white;
+                color: $grey !important;
                 font-weight: bold;
+                cursor: default;
             }
         }
 
