--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -21,12 +21,18 @@ header {
                 font-family: learn-serbian-light-italic;
                 font-size: set-size(md);
                 background-color: $gradient-first;
-                border: none;
+                border: 1px solid transparent;
                 border-radius: 10px;
                 padding: 10px;
+                transition: 300ms;
 
                 &::placeholder {
                     color: white;
+                }
+
+                &:focus {
+                    outline: none;
+                    border: 1px solid white;
                 }
             }
         }
@@ -56,11 +62,34 @@ header {
             }
         }
 
-        .header-user-block img {
-            height: 55px;
-            width: 55px;
-            object-fit: contain;
-            border-radius: 50%;
+        .header-user-block {
+            @include center;
+            gap: 50px;
+            
+            .header-points-block {
+                @include center;
+                gap: 10px;
+    
+                img {
+                    height: 30px;
+                    width: 30px;
+                    object-fit: contain;
+                }
+    
+                p {
+                    color: $grey;
+                    font-family: learn-serbian-medium;
+                    font-size: set-size(md);
+                    font-weight: bold;
+                }
+            }
+            
+            img {
+                height: 55px;
+                width: 55px;
+                object-fit: contain;
+                border-radius: 50%;
+            }
         }
     }
 }
